/**
 * @file Polygone.hpp
 * @brief Définition d'une classe template représentant un polygone géométrique.
 * @author CAU_Simon
 * @version 1.0
 */

#pragma once
#include <iostream>
#include <vector>
#include <sstream>

#include "Point2D.hpp"
#include "Helper.hpp"


template<typename T>
class Polygone;


template<typename T>
std::ostream& operator<<(std::ostream& os, Polygone<T> const& p);

/**
 * @class Polygone
 * @brief Classe template gérant une collection de points (sommets) formant un polygone.
 * * Cette classe stocke une liste de Point2D et permet d'effectuer des opérations 
 * globales comme la translation ou l'affichage de la forme complète.
 * * @tparam T Le type de donnée des coordonnées des sommets (ex: int, double).
 */
template<typename T>
class Polygone {
private:
    /** * @brief Vecteur contenant la liste ordonnée des sommets du polygone. 
     */
    std::vector< Point2D<T> > sommets;

public:
    /**
     * @brief Constructeur par défaut.
     * Crée un polygone vide (sans sommets).
     */
    Polygone() {} 

    /**
     * @brief Constructeur avec initialisation.
     * @param listeSommets Un vecteur de Point2D pour initialiser le polygone.
     */
    Polygone(std::vector< Point2D<T> > const& listeSommets)
        : sommets(listeSommets) {}

    /**
     * @brief Constructeur de copie.
     * @param pol Le polygone à copier.
     */
    Polygone(Polygone<T> const &pol);

    // Setteurs et Getters

    /**
     * @brief Récupère la liste des sommets.
     * @return Un vecteur contenant tous les points du polygone.
     */
    std::vector< Point2D<T> > getSommets() const; 

    /**
     * @brief Donne la surface totale de la parcelle
     * @return float 
     */
    float getSurface();

    /**
     * @brief Remplace la liste actuelle des sommets.
     * @param listeSommets Le nouveau vecteur de points.
     */
    void setSommets(std::vector< Point2D<T> > const& listeSommets);

    /**
     * @brief Ajoute un nouveau sommet à la fin de la liste du polygone.
     * @param p Le point à ajouter.
     */
    void addSommet(Point2D<T> const& p); 

    // Opérations Géométriques

    /**
     * @brief Translate le polygone entier.
     * Applique une translation (x, y) à chaque sommet du polygone.
     * @param x Valeur de déplacement horizontal.
     * @param y Valeur de déplacement vertical.
     */
    void translate(T x, T y);

    /**
     * @brief Donne les informations formatées du polygone
     * Format de sortie : Polygone [Point1, Point2, ...]
     * @param os Le flux de sortie.
     */
    std::string toString() const;

    /**
     * @brief Serialize le polygone pour l'écriture dans un fichier
     *
     * @return std::string
     */
    std::string serialize() const;

    /**
     * @brief Désérialise le polygone pour la lecture d'un fichier
     * 
     * @param input (IN) String à désérialiser
     * @return Polygone<T> 
     */
    static Polygone<T> deserialize(std::string input);

    /**
     * @brief Surcharge de l'opérateur de flux pour l'affichage standard.
     * @param os Le flux de sortie (ex: std::cout).
     * @param p Le polygone à afficher.
     * @return Une référence vers le flux de sortie.
     */
    friend std::ostream& operator<< <T>(std::ostream& os, Polygone<T> const& p);

};

template<typename T>
Polygone<T>::Polygone(Polygone<T> const& pol)
    : sommets(pol.sommets) {}


// Implémentation des méthodes

template<typename T>
std::vector< Point2D<T> > Polygone<T>::getSommets() const {
    return this->sommets;
}

template<typename T>
float Polygone<T>::getSurface(){
    float surface = 0;
    for (size_t i = 0; i < this->sommets.size()-1; i++)
    {
        auto point0 = this->sommets.at(i);
        auto point1 = this->sommets.at(i + 1);
        surface += point0.getX() * point1.getY() - point1.getX() * point0.getY();
    }
    return surface /= 2;

}

template<typename T>
void Polygone<T>::setSommets(std::vector< Point2D<T> > const& listeSommets) {
    this->sommets = listeSommets;
}

template<typename T>
void Polygone<T>::addSommet(Point2D<T> const& p) {
    this->sommets.push_back(p);
}

template<typename T>
void Polygone<T>::translate(T x, T y) {
    // Itère sur chaque point par référence pour le modifier
    for (auto& p : this->sommets) {
        p.translate(x, y); 
    }
}

template<typename T>
std::string Polygone<T>::toString() const {
    std::ostringstream os;
    os << "Polygone [";
    for (size_t i = 0; i < sommets.size(); ++i) {
        os << sommets[i]; // Utilise l'opérateur << de Point2D
        if (i < sommets.size() - 1) {
            os << ", ";
        }
    }
    os << "]";
    return os.str();
}

template<typename T>
std::string Polygone<T>::serialize() const {
    std::ostringstream os;
    for (size_t i = 0; i < this->sommets.size(); i++)
    {
        os << this->sommets.at(i).serialize();
        if (i < this->sommets.size() - 1)
        {
            os << ";";
        }
    }
    return os.str();
}

template <typename T>
Polygone<T> Polygone<T>::deserialize(std::string input) 
{
    // Get all points
    std::vector<Point2D<T>> points;
    for (auto &&point_str : Helper::split(input, ";"))
    {
        auto point = Point2D<float>::deserialize(point_str);    
        points.push_back(point);
    }
    return Polygone<T>(points);
}

template<typename T>
std::ostream& operator<<(std::ostream& os, Polygone<T> const& p) {
    os << p.toString();
    return os;
}