@startuml Parcelle_Class_Diagram

class "Point2D<T>" as Point2D {
  - x: T
  - y: T

  + Point2D(T x, T y)
  + Point2D()
  + Point2D(Point2D<T> p)
  + getX(): T
  + getY(): T
  + setX(T): void
  + setY(T): void
  + translate(T, T): void
}

class "Polygone<T>" as Polygone {
  - sommets: Vector<Point2D<T>>

  + Polygone()
  + Polygone(Vector<Point2D<T>>)
  + Polygone(Polygone<T>)
  + getSommets(): Vector<Point2D<T>>
  + setSommets(Vector<Point2D<T>>): void
  + addSommet(Point2D<T>): void
  + translate(T, T): void
  + getSurface(): float
  + serialize(): string
  + deserialize(string): Polygone<T>
}

class Parcelle {
  # type: string
  # numero: int
  # proprietaire: string
  # surface: float
  # forme: Polygone<float>
  # pourcentageConstructible: int

  + Parcelle(int, string, Polygone<float>)
  + Parcelle(Parcelle)
  + getNumero(): int
  + getProprietaire(): string
  + getSurface(): float
  + getForme(): Polygone<float>
  + getType(): string
  + setNumero(int): void
  + setProprietaire(string): void
  + setForme(Polygone<float>): void
  + toString(): string
  {abstract} + serialize(): string
}

class Constructible {
  + Constructible(int, string, Polygone<float>)
  + Constructible(Constructible)
  + getSurfaceConstructible(): float
}

class ZN {
  + ZN(int, string, Polygone<float>)
  + ZN(ZN)
  ..
  + serialize(): string
  {static} + deserialize(string): ZN
}

class ZA {
  - typeCulture: TypeCulture
  + ZA(int, string, Polygone<float>, TypeCulture, int)
  + ZA(ZA)
  + getTypeCulture(): TypeCulture
  + constructible(Polygone<float>): bool
  ..
  + serialize(): string
  {static} + deserialize(string): ZA
}

class ZAU {
  + ZAU(int, string, Polygone<float>, float)
  + ZAU(ZAU)
  ..
  + serialize(): string
  {static} + deserialize(string): ZAU
}

class ZU {
  - surfaceConstruite: float
  + ZU(int, string, Polygone<float>, float, int)
  + ZU(ZU)
  + getSurfaceConstructible(): float
  ..
  + serialize(): string
  {static} + deserialize(string): ZU
}

class Carte {
  - parcelles: vector<Parcelle>
  + save(string): void
  + load(string): void
}

enum TypeCulture {
  BLE
  MAIS
  CHANVRE
  VACHE
  COCHON
}

' Inheritance & virtual inheritance
Constructible --|> Parcelle : «virtual»
ZN --|> Parcelle : «virtual»
ZA --|> ZN
ZA --|> Constructible
ZAU --|> Constructible
ZU --|> Constructible

' Associations
Polygone "1" o-- "0..n" Point2D
Parcelle "1" --> "1" Polygone
Carte "1" o-- "0..n" Parcelle
ZA "1" --> "1" TypeCulture

' Layout hints
left to right direction
@enduml